# Trainning_2025

./: .gitignore  README.md
C#/LeetCode_Problems/: Trainning2025.sln
C#/LeetCode_Problems/BestTimetoBuyandSellStock/: BestTimetoBuyandSellStock.csproj  Program.cs  README.md
C#/LeetCode_Problems/BestTimetoBuyandSellStockII/: BestTimetoBuyandSellStockII.csproj  Program.cs  README.md
C#/LeetCode_Problems/CrowStickCollection/: Program.cs  README.md
C#/LeetCode_Problems/MajorityElement/: MajorityElement.csproj  Program.cs  README.md
C#/LeetCode_Problems/MergedSortedArray/: Program.cs  README.md
C#/LeetCode_Problems/RemoveDuplicatesfromSortedArray/: Program.cs  README.md  RemoveDuplicatesfromSortedArray.csproj
C#/LeetCode_Problems/RemoveDuplicatesfromSortedArrayII/: Program.cs  README.md  RemoveDuplicatesfromSortedArrayII.csproj
C#/LeetCode_Problems/RemoveElement/: Program.cs  README.md
C#/LeetCode_Problems/RotateArray/: Program.cs  README.md  RotateArray.csproj
C++/Fractals/Circles/: Circles.cpp
C++/Fractals/Circles/Circles.dSYM/Contents/: Info.plist
C++/Fractals/Circles/Circles.dSYM/Contents/Resources/DWARF/: Circles
C++/Fractals/KochCurve/: CMakeLists.txt  KochCurve.cpp  README.md
C++/Fractals/KochCurve/KochCurve.dSYM/Contents/: Info.plist
C++/Fractals/KochCurve/KochCurve.dSYM/Contents/Resources/DWARF/: KochCurve
C++/Fractals/KochCurve/include/: Line.h
C++/Fractals/KochCurve/src/: KochCurve.cpp  Line.cpp
C++/Reinforcement_Learning/: README.md
C++/Reinforcement_Learning/Puzzle_1/: CMakeLists.txt  README.md
C++/Reinforcement_Learning/Puzzle_1/include/: Agent.h  AgentAction.h  AgentActions.h  Agent_Empty.h  Agent_GRPO.h  Agent_QLearning.h  Agent_Random.h  DifficultyLevel.h  Grid.h  IAgent.h  IGrid.h  Position.h  PuzzleGrid.h  RGBColor.h  Rewards.h
C++/Reinforcement_Learning/Puzzle_1/src/: Agent.cpp  Agent_Empty.cpp  Agent_GRPO.cpp  Agent_QLearning.cpp  Agent_Random.cpp  Grid.cpp  IAgent.cpp  IGrid.cpp  PuzzleGrid.cpp  main.cpp
C++/Spirograph/: CMakeLists.txt
C++/Spirograph/src/: spirograph.cpp
C++/high_perf_storage/: CMakeLists.txt  README.md
C++/high_perf_storage/include/: MarketData.h  ThreadSafeQueue.h
C++/high_perf_storage/src/: BufferedWriter.cpp  BufferedWriter.h  DataWriter.cpp  DataWriter.h  HistoricalDataReader.cpp  HistoricalDataReader.h  LiveDataCollector.cpp  LiveDataCollector.h  LiveDataGenerator.cpp  LiveDataGenerator.h  ThreadSafeQueue.cpp  main.cpp
java/PrisonerDilemma/: README.md
java/PrisonerDilemma/src/: PrisonerDilemma.java
java/PrisonerDilemma/src/Strategies/: AlwaysCooperate.java  AlwaysSwitch.java  CooperateOnEvenTurns.java  CooperateUntilBetrayed.java  DefectWithProbability.java  ILearningStrategy.java  IStrategy.java  NeuralStrategy_MultiLayer.java  NeuralStrategy_SingleLayer.java  NeverCooperate.java  QLearningStrategy.java  Random.java  RandomOnEvenTurns.java  TitForTat.java
python/crypto_trading_rl/: main.py  requirements.txt
python/crypto_trading_rl/api/: BinanceClient.py  coingecko_client.py  google_news_rss_client.py  robinhood_client.py
python/crypto_trading_rl/llm/: ollama_client.py
python/crypto_trading_rl/news/: news_fetcher.py  news_pipeline.py  sentiment_analyzer.py
python/crypto_trading_rl/utils/: date_utils.py  file_utils.py  html_to_markdown.py  logger.py  news_fetcher.py  sentiment_analyzer.py  thermal_helper.py
(+2 files in other folders)
